# scheduling

./: CMakeLists.txt  Doxyfile  README.md  beta.txt  jobs.txt  main.cpp
examples/: script_clear_outputs.sh  script_print_files.sh  test.py
examples/example_001/: job_sequence.yaml
examples/example_002/: description.txt
examples/example_003/: individual.yaml  job_sequence.yaml  machine_topology.yaml
examples/example_004/: machine_specifications.yaml  machine_topology.yaml
examples/example_005/: description.txt
examples/example_006/: individual.yaml
examples/example_007/: machine_topology.yaml
examples/example_008/: description.txt  individual.yaml
examples/example_009/: description.txt  job_sequence.yaml  machine_topology.yaml
examples/example_01/: description.txt  individual.yaml  individual_1.yaml  job_sequence.yaml  machine_specifications.yaml
examples/example_010/: description.txt
examples/example_011/: individual.yaml
examples/example_012/: description.txt  individual.yaml  job_sequence.yaml  machine_topology.yaml
examples/example_013/: machine_topology.yaml
examples/example_014/: description.txt  individual.yaml
examples/example_015/: description.txt  individual.yaml  machine_topology.yaml
examples/example_016/: description.txt  individual.yaml
examples/example_017/: description.txt
examples/example_018/: job_sequence.yaml
examples/example_019/: machine_topology.yaml
examples/example_02/: description.txt  individual.yaml  individual_1.yaml  job_specifications.yaml  machine_topology.yaml
examples/example_020/: individual.yaml  job_sequence.yaml
examples/example_022/: machine_topology.yaml
examples/example_023/: description.txt  machine_topology.yaml
examples/example_024/: job_sequence.yaml  machine_topology.yaml
examples/example_025/: description.txt
examples/example_026/: description.txt  job_specifications.yaml
examples/example_027/: individual.yaml  job_specifications.yaml
examples/example_028/: description.txt  machine_specifications.yaml
examples/example_029/: description.txt
examples/example_03/: description.txt  individual.yaml  individual_1.yaml  job_sequence.yaml  job_specifications.yaml  machine_specifications.yaml
examples/example_030/: description.txt
examples/example_031/: description.txt  job_sequence.yaml
examples/example_032/: individual.yaml
examples/example_034/: job_sequence.yaml
examples/example_037/: machine_topology.yaml
examples/example_038/: individual.yaml
examples/example_039/: description.txt
examples/example_04/: description.txt  individual.yaml  individual_1.yaml  job_sequence.yaml  job_specifications.yaml
examples/example_040/: individual.yaml
examples/example_041/: job_sequence.yaml
examples/example_043/: individual.yaml  job_sequence.yaml  path_nodes.txt
examples/example_044/: job_sequence.yaml
examples/example_045/: description.txt  job_sequence.yaml  machine_topology.yaml
examples/example_046/: description.txt  individual.yaml  machine_topology.yaml
examples/example_047/: description.txt
examples/example_048/: description.txt  job_sequence.yaml
examples/example_049/: description.txt
examples/example_05/: individual.yaml  individual_1.yaml  job_sequence.yaml
examples/example_051/: description.txt
examples/example_052/: individual.yaml
examples/example_053/: description.txt
examples/example_054/: description.txt  machine_topology.yaml
examples/example_055/: machine_topology.yaml
examples/example_056/: description.txt
examples/example_058/: machine_topology.yaml
examples/example_06/: description.txt  individual.yaml  individual_1.yaml  job_sequence.yaml
examples/example_060/: description.txt  job_specifications.yaml  machine_specifications.yaml
examples/example_061/: description.txt  job_sequence.yaml
examples/example_063/: description.txt
examples/example_064/: machine_specifications.yaml
examples/example_065/: description.txt  machine_specifications.yaml
examples/example_066/: description.txt
examples/example_067/: description.txt  machine_specifications.yaml
examples/example_068/: description.txt  machine_specifications.yaml
examples/example_07/: description.txt  individual.yaml  individual_1.yaml  job_sequence.yaml
examples/example_070/: description.txt  machine_topology.yaml
examples/example_071/: individual.yaml  machine_specifications.yaml
examples/example_072/: description.txt  job_sequence.yaml  machine_specifications.yaml  machine_topology.yaml
examples/example_073/: description.txt
examples/example_074/: machine_specifications.yaml
examples/example_076/: description.txt  individual.yaml  job_sequence.yaml
examples/example_077/: individual.yaml  machine_topology.yaml
examples/example_078/: job_sequence.yaml  machine_specifications.yaml
examples/example_079/: description.txt
examples/example_08/: individual.yaml  individual_1.yaml  machine_topology.yaml
examples/example_080/: description.txt  job_sequence.yaml
examples/example_081/: job_sequence.yaml
examples/example_082/: description.txt
examples/example_083/: description.txt  individual.yaml  job_sequence.yaml  machine_specifications.yaml
examples/example_084/: description.txt  individual.yaml
examples/example_085/: description.txt  individual.yaml  machine_specifications.yaml
examples/example_086/: description.txt  job_sequence.yaml  job_specifications.yaml
examples/example_087/: description.txt  machine_specifications.yaml
executables/: bit_sum_genotype.cpp  generate_breakdowns.cpp  generate_jobs.cpp  online_scheduling.cpp  online_scheduling_genotype.cpp  random_generator.cpp  regression_algorithm.cpp  run_example.cpp  run_examples.cpp  run_test.cpp  simple_experiment.cpp  topology_enumerator.cpp
genotype-config-examples/: example_01.yaml  example_02.yaml  example_03.yaml  example_04.yaml  example_05.yaml  example_06.yaml
notes/: alpha_params.txt  beta_params.txt  genotype.txt  job_characteristics.txt  parameter_inconsistencies.txt  yaml_config_files_params.txt
tests/: script_clear_outputs
(+1429 files in other folders)
